--- a/estilo.css
+++ b/estilo.css
@@ -44,6 +44,16 @@ header, footer, .redes-sociais, .tecnologias{
     text-align: left;
 }
 
+.telefone{
+    width: 250px;
+    height: 20px;
+    display: inline-block;
+    padding-left: 21px;
+    background-image: url(telefone.png);
+    background-repeat: no-repeat;
+    text-align: left;
+}
+
 .redes-sociais li{
     
     display: inline-block;
@@ -114,12 +124,12 @@ h3{
     
 }
 
-.tecnologiaas ul{
+.tecnologias ul{
     width: 700px;
     margin: 0 auto;
 }
 
-.tecnologiaas li{
+.tecnologias li{
     display: inline-block;
     width: 150px;
     padding: 8px;
@@ -154,5 +164,43 @@ h3{
 .design:hover{
     background-color: #2980b9;
     
+}
+
+.banco{
+    background-color: #9b59b6;
+    border: 2px solid #8e44ad;
+}
+
+.banco:hover{
+    background-color: #8e44ad;
+    
+}
+
+.sistema{
+    background-color: #34495e;
+    border: 2px solid #2c3e50;
+}
+
+.sistema:hover{
+    background-color: #2c3e50;
+    
+}
+
+.web{
+    background-color: #e74c3c;
+    border: 2px solid #c0392b;
+}
+
+.web:hover{
+    background-color: #c0392b;
+    
+}
+
+footer{
+    margin-top: 50px;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    background-color: #DC3D24;
+    text-shadow: 0.5px 1.5px #232B2B;
 }
 
